implementing historydrilldown for tone entities
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C40179

--- a/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Directives/CodeGroup/Templates/CodeGroupGridTemplate.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Directives/CodeGroup/Templates/CodeGroupGridTemplate.html
@@ -8,4 +8,7 @@
     <vr-datagridcolumn headertext="'ID'" field="'Entity.CodeGroupId'" type="'Text'" widthfactor="2"></vr-datagridcolumn>
     <vr-datagridcolumn headertext="'Code Group'" field="'Entity.Code'" type="'Text'"></vr-datagridcolumn>
     <vr-datagridcolumn headertext="'Country'" field="'CountryName'" type="'Text'" ng-if="!hidecountrycolumn"></vr-datagridcolumn>
+    <vr-datagridexpandablerow>
+        <vr-directivetabs tabitems="dataItem.drillDownExtensionObject.drillDownDirectiveTabs"></vr-directivetabs>
+    </vr-datagridexpandablerow>
 </vr-datagrid>
