--- a/Vanrise/Code/Vanrise.Common.Web/Common/Directives/VRTimeZone/Templates/VRTimeZoneGridTemplate.html
+++ b/Vanrise/Code/Vanrise.Common.Web/Common/Directives/VRTimeZone/Templates/VRTimeZoneGridTemplate.html
@@ -8,4 +8,7 @@
     <vr-datagridcolumn headertext="'ID'" field="'Entity.TimeZoneId'" type="'Text'"></vr-datagridcolumn>
     <vr-datagridcolumn headertext="'Name'" field="'Entity.Name'" type="'Text'"></vr-datagridcolumn>
     <vr-datagridcolumn headertext="'Time Shift'" field="'Entity.Settings.Offset'" type="'Text'"></vr-datagridcolumn>
+    <vr-datagridexpandablerow>
+        <vr-directivetabs tabitems="dataItem.drillDownExtensionObject.drillDownDirectiveTabs"></vr-directivetabs>
+    </vr-datagridexpandablerow>
 </vr-datagrid>
