Implementing zajil invoice
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C40187

--- a/Retail/Code/Retail.Zajil.Web/Retail_Zajil/Directives/MainExtensions/ZajilInvoiceSettings/Templates/ZajilnvoiceSettingsTemplate.html
+++ b/Retail/Code/Retail.Zajil.Web/Retail_Zajil/Directives/MainExtensions/ZajilInvoiceSettings/Templates/ZajilnvoiceSettingsTemplate.html
@@ -5,4 +5,9 @@
                                                           isrequired="true">
         </vr-genericdata-businessentitydefinition-selector>
     </vr-columns>
+    <retail-be-accountpartdefinition-selector on-ready="scopeModel.onCompanyExtentedInfoSelectorReady"
+                                              normal-col-num="4"
+                                              customlabel="Company Extended Info"
+                                              isrequired="true">
+    </retail-be-accountpartdefinition-selector>
 </vr-row>
