--- a/Retail/Code/Retail.Zajil.Web/Retail_Zajil/Reports/SubscriberInvoiceReport.rdlc
+++ b/Retail/Code/Retail.Zajil.Web/Retail_Zajil/Reports/SubscriberInvoiceReport.rdlc
@@ -1316,7 +1316,7 @@
                         <Paragraph>
                           <TextRuns>
                             <TextRun>
-                              <Value>="Account Payable to " + Parameters!CompanyAddress.Value</Value>
+                              <Value>="Account Payable to " + Parameters!RegAddress.Value</Value>
                               <Style>
                                 <FontFamily>Verdana</FontFamily>
                                 <FontSize>8pt</FontSize>
