--- a/Vanrise/Code/Vanrise.Common.Web/Common/Directives/ActionAudit/Templates/ActionAuditSearch.html
+++ b/Vanrise/Code/Vanrise.Common.Web/Common/Directives/ActionAudit/Templates/ActionAuditSearch.html
@@ -1,44 +1,40 @@
-﻿<vr-panel>
-    <vr-form name="formFilter">
-        <div ng-hide="filterSectionCollapsed" vr-loader="isLoadingFilters">
-            <vr-row removeline>
-                
-                <vr-columns width="normal">
-                    <vr-datetimepicker type="dateTime" label="From" isrequired="true" value="scopeModel.fromTime" customvalidate="scopeModel.validateDateTime()"></vr-datetimepicker>
-                </vr-columns>
-                <vr-columns width="normal">
-                    <vr-datetimepicker type="dateTime" label="To" value="scopeModel.toTime" customvalidate="scopeModel.validateDateTime()"></vr-datetimepicker>
-                </vr-columns>
-                <vr-columns width="normal">
-                    <vr-sec-user-selector ismultipleselection="true" on-ready="scopeModel.onUserSelectorReady"></vr-sec-user-selector>
-                </vr-columns>
-               <vr-common-actionauditlkup-selector on-ready="scopeModel.onModuleDirectiveReady" customlabel="Module" ismultipleselection normal-col-num="2"></vr-common-actionauditlkup-selector>
-               <vr-common-actionauditlkup-selector on-ready="scopeModel.onEntityDirectiveReady" customlabel="Entity" ismultipleselection normal-col-num="2"></vr-common-actionauditlkup-selector>
-               <vr-common-actionauditlkup-selector on-ready="scopeModel.onActionDirectiveReady" customlabel="Action" ismultipleselection normal-col-num="2"></vr-common-actionauditlkup-selector>
-                <vr-columns width="normal">
-                    <vr-textbox label="Object Id" value="scopeModel.objectId" ></vr-textbox>
-                </vr-columns>
-                <vr-columns width="normal">
-                    <vr-textbox label="Object Name" value="scopeModel.objectName"></vr-textbox>
-                </vr-columns>
-                <vr-columns width="normal">
-                    <vr-numeric label="Top" value="scopeModel.top" isrequired="true" minvalue="1"></vr-numeric>
-                </vr-columns>
-            </vr-row>
-        </div>
+﻿<vr-form name="formFilter">
+    <div ng-hide="filterSectionCollapsed" vr-loader="isLoadingFilters">
         <vr-row removeline>
-            <vr-actionbar showcollapsebutton="true" issectioncollapsed="filterSectionCollapsed">
-                <div transclude-to="buttons">
-                    <vr-button type="Search" formname="formFilter" data-onclick="scopeModel.searchClicked"></vr-button>
-                </div>
-            </vr-actionbar>
-        </vr-row>
-        <vr-row>
-            <vr-columns width="fullrow" ng-show="showGrid">
-                <vr-common-actionaudit-grid on-ready="scopeModel.onGridReady"></vr-common-actionaudit-grid>
+
+            <vr-columns width="normal">
+                <vr-datetimepicker type="dateTime" label="From" isrequired="true" value="scopeModel.fromTime" customvalidate="scopeModel.validateDateTime()"></vr-datetimepicker>
+            </vr-columns>
+            <vr-columns width="normal">
+                <vr-datetimepicker type="dateTime" label="To" value="scopeModel.toTime" customvalidate="scopeModel.validateDateTime()"></vr-datetimepicker>
+            </vr-columns>
+            <vr-columns width="normal">
+                <vr-sec-user-selector ismultipleselection="true" on-ready="scopeModel.onUserSelectorReady"></vr-sec-user-selector>
+            </vr-columns>
+            <vr-common-actionauditlkup-selector on-ready="scopeModel.onModuleDirectiveReady" customlabel="Module" ismultipleselection normal-col-num="2"></vr-common-actionauditlkup-selector>
+            <vr-common-actionauditlkup-selector on-ready="scopeModel.onEntityDirectiveReady" customlabel="Entity" ismultipleselection normal-col-num="2"></vr-common-actionauditlkup-selector>
+            <vr-common-actionauditlkup-selector on-ready="scopeModel.onActionDirectiveReady" customlabel="Action" ismultipleselection normal-col-num="2"></vr-common-actionauditlkup-selector>
+            <vr-columns width="normal">
+                <vr-textbox label="Object Id" value="scopeModel.objectId"></vr-textbox>
+            </vr-columns>
+            <vr-columns width="normal">
+                <vr-textbox label="Object Name" value="scopeModel.objectName"></vr-textbox>
+            </vr-columns>
+            <vr-columns width="normal">
+                <vr-numeric label="Top" value="scopeModel.top" isrequired="true" minvalue="1"></vr-numeric>
             </vr-columns>
         </vr-row>
-
-    </vr-form>
-
-</vr-panel>
+    </div>
+    <vr-row removeline>
+        <vr-actionbar showcollapsebutton="true" issectioncollapsed="filterSectionCollapsed">
+            <div transclude-to="buttons">
+                <vr-button type="Search" formname="formFilter" data-onclick="scopeModel.searchClicked"></vr-button>
+            </div>
+        </vr-actionbar>
+    </vr-row>
+    <vr-row>
+        <vr-columns width="fullrow" ng-show="showGrid">
+            <vr-common-actionaudit-grid on-ready="scopeModel.onGridReady"></vr-common-actionaudit-grid>
+        </vr-columns>
+    </vr-row>
+</vr-form>
