--- a/Vanrise/Code/Vanrise.Integration.Web/Integration/Directives/DataSource/Templates/DataSourceLogSearch.html
+++ b/Vanrise/Code/Vanrise.Integration.Web/Integration/Directives/DataSource/Templates/DataSourceLogSearch.html
@@ -1,35 +1,33 @@
-﻿<vr-panel >
-    <vr-form name="formFilter">
-        <div ng-hide="filterSectionCollapsed" vr-loader="isLoading">
-            <vr-row removeline>
-                <vr-columns width="normal" haschildcolumns>
-                    <vr-integration-datasource-selector on-ready="onDataSourceSelectorReady" selectedvalues="selectedDataSource" isrequired="true"></vr-integration-datasource-selector>
-                </vr-columns>
-                <vr-columns width="normal">
-                    <vr-select ismultipleselection label="Severity" datatextfield="description" datavaluefield="value" datasource="severities" selectedvalues="selectedSeverities"></vr-select>
-                </vr-columns>
+﻿<vr-form name="formFilter">
+    <div ng-hide="filterSectionCollapsed" vr-loader="isLoading">
+        <vr-row removeline>
+            <vr-columns width="normal" haschildcolumns>
+                <vr-integration-datasource-selector on-ready="onDataSourceSelectorReady" selectedvalues="selectedDataSource" isrequired="true"></vr-integration-datasource-selector>
+            </vr-columns>
+            <vr-columns width="normal">
+                <vr-select ismultipleselection label="Severity" datatextfield="description" datavaluefield="value" datasource="severities" selectedvalues="selectedSeverities"></vr-select>
+            </vr-columns>
 
-                <vr-columns width="normal">
-                    <vr-datetimepicker label="From" type="dateTime" value="selectedFromDateTime" customvalidate="validateDateTime()"></vr-datetimepicker>
-                </vr-columns>
-                <vr-columns width="normal">
-                    <vr-datetimepicker label="To" type="dateTime" value="selectedToDateTime" customvalidate="validateDateTime()"></vr-datetimepicker>
-                </vr-columns>
-            </vr-row>
-        </div>
-    </vr-form>
-    <vr-row removeline>
-        <vr-actionbar showcollapsebutton="true" issectioncollapsed="filterSectionCollapsed">
-            <div transclude-to="buttons">
-                <vr-button type="Search" formname="formFilter" data-onclick="searchClicked" isasynchronous="true"></vr-button>
-            </div>
-        </vr-actionbar>
-    </vr-row>
-    <div>
-        <vr-row ng-show="showGrid">
-            <vr-columns width="fullrow" simplecol>
-                <vr-integration-log-grid on-ready="gridReady"></vr-integration-log-grid>
-             </vr-columns>
+            <vr-columns width="normal">
+                <vr-datetimepicker label="From" type="dateTime" value="selectedFromDateTime" customvalidate="validateDateTime()"></vr-datetimepicker>
+            </vr-columns>
+            <vr-columns width="normal">
+                <vr-datetimepicker label="To" type="dateTime" value="selectedToDateTime" customvalidate="validateDateTime()"></vr-datetimepicker>
+            </vr-columns>
         </vr-row>
     </div>
-</vr-panel>
+</vr-form>
+<vr-row removeline>
+    <vr-actionbar showcollapsebutton="true" issectioncollapsed="filterSectionCollapsed">
+        <div transclude-to="buttons">
+            <vr-button type="Search" formname="formFilter" data-onclick="searchClicked" isasynchronous="true"></vr-button>
+        </div>
+    </vr-actionbar>
+</vr-row>
+<div>
+    <vr-row ng-show="showGrid">
+        <vr-columns width="fullrow" simplecol>
+            <vr-integration-log-grid on-ready="gridReady"></vr-integration-log-grid>
+        </vr-columns>
+    </vr-row>
+</div>
