Refactored the page to correctly reload the countryChanges after the process is completed
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C40197

--- a/TOneV2/Code/TOneV2/TOne.WhS.Sales.Web/WhS_Sales/Views/RatePlan.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.Sales.Web/WhS_Sales/Views/RatePlan.html
@@ -97,7 +97,7 @@
             </vr-actionbar>
         </vr-row>
 
-        <div vr-loader="isLoadingRatePlan">
+        <div vr-loader="isLoading">
             <vr-row ng-if="showDefaultItem">
                 <vr-columns width="fullrow">
                     <vr-directivetabs tabitems="defaultItemTabs"></vr-directivetabs>
