--- a/Vanrise/Code/Vanrise.Invoice.Web/VR_Invoice/Directives/InvoiceSetting/Templates/InvoiceSettingGridTemplate.html
+++ b/Vanrise/Code/Vanrise.Invoice.Web/VR_Invoice/Directives/InvoiceSetting/Templates/InvoiceSettingGridTemplate.html
@@ -4,7 +4,7 @@
              pagingtype="'PagingOnScroll'"
              menuactions="gridMenuActions"
              idfield="Entity.InvoiceSettingId">
-    <vr-datagridcolumn headertext="'Invoice Setting Id'" type="'Text'" field="'Entity.InvoiceSettingId'"></vr-datagridcolumn>
+    <vr-datagridcolumn headertext="'ID'" type="'Text'" field="'Entity.InvoiceSettingId'"></vr-datagridcolumn>
     <vr-datagridcolumn headertext="'Name'" type="'Text'" field="'Entity.Name'"></vr-datagridcolumn>
     <vr-datagridcolumn headertext="'Default'" type="'Text'" field="'Entity.IsDefault'">
         <vr-icon icontype="dataItem.Entity.IsDefault"></vr-icon>
