remove save permission check
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C40203

--- a/Vanrise/Code/Vanrise.Runtime.Web/Runtime/Views/SchedulerTaskEditor.html
+++ b/Vanrise/Code/Vanrise.Runtime.Web/Runtime/Views/SchedulerTaskEditor.html
@@ -69,7 +69,7 @@
     <div>
         <vr-actionbar showcollapsebutton="false" issectioncollapsed="false">
             <div transclude-to="buttons">
-                <vr-button type="Save" formname="formSchedulerTaskEditor" data-onclick="SaveTask" haspermission="hasSavePermission"></vr-button>
+                <vr-button type="Save" formname="formSchedulerTaskEditor" data-onclick="SaveTask" ></vr-button>
                 <vr-button type="Close" data-onclick="close"></vr-button>
             </div>
         </vr-actionbar>
