Update header field to ID
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C40204

--- a/Vanrise/Code/Vanrise.Invoice.Web/VR_Invoice/Directives/InvoiceType/Templates/InvoiceTypeGridTemplate.html
+++ b/Vanrise/Code/Vanrise.Invoice.Web/VR_Invoice/Directives/InvoiceType/Templates/InvoiceTypeGridTemplate.html
@@ -4,6 +4,6 @@
              pagingtype="'PagingOnScroll'"
              menuactions="gridMenuActions"
              idfield="Entity.InvoiceTypeId">
-    <vr-datagridcolumn headertext="'Invoice Type Id'" type="'Text'" field="'Entity.InvoiceTypeId'"></vr-datagridcolumn>
+    <vr-datagridcolumn headertext="'ID'" type="'Text'" field="'Entity.InvoiceTypeId'"></vr-datagridcolumn>
     <vr-datagridcolumn headertext="'Name'" type="'Text'" field="'Entity.Name'"></vr-datagridcolumn>
 </vr-datagrid>
