change parameters to invoice
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C40207

--- a/Retail/Code/Retail.Zajil.Web/Retail_Zajil/Reports/SubscriberInvoiceReport.rdlc
+++ b/Retail/Code/Retail.Zajil.Web/Retail_Zajil/Reports/SubscriberInvoiceReport.rdlc
@@ -283,7 +283,7 @@
                         <Paragraph>
                           <TextRuns>
                             <TextRun>
-                              <Value>=Parameters!RefNumber.Value</Value>
+                              <Value>="BT_VOICE_INV_" + UCase(CDate(Parameters!InvoiceDate.Value).ToString("MMM"))</Value>
                               <Style>
                                 <FontFamily>Verdana</FontFamily>
                                 <FontSize>8pt</FontSize>
@@ -304,6 +304,7 @@
                         <PaddingBottom>2pt</PaddingBottom>
                       </Style>
                     </Textbox>
+                    <rd:Selected>true</rd:Selected>
                   </CellContents>
                 </TablixCell>
                 <TablixCell>
@@ -411,7 +412,7 @@
                         <Paragraph>
                           <TextRuns>
                             <TextRun>
-                              <Value>=Parameters!PaymentTerms.Value</Value>
+                              <Value>=Parameters!PaymentTerms.Value + " Days"</Value>
                               <Style>
                                 <FontFamily>Verdana</FontFamily>
                                 <FontSize>8pt</FontSize>
@@ -2191,12 +2192,6 @@ not receive anything in writing with in a week starting from invoice delivery</V
       <AllowBlank>true</AllowBlank>
       <Prompt>ReportParameter1</Prompt>
     </ReportParameter>
-    <ReportParameter Name="RefNumber">
-      <DataType>String</DataType>
-      <Nullable>true</Nullable>
-      <AllowBlank>true</AllowBlank>
-      <Prompt>ReportParameter1</Prompt>
-    </ReportParameter>
     <ReportParameter Name="SalesPersonID">
       <DataType>String</DataType>
       <Nullable>true</Nullable>
@@ -2222,12 +2217,6 @@ not receive anything in writing with in a week starting from invoice delivery</V
       <Prompt>ReportParameter1</Prompt>
     </ReportParameter>
     <ReportParameter Name="CompanyName">
-      <DataType>String</DataType>
-      <Nullable>true</Nullable>
-      <AllowBlank>true</AllowBlank>
-      <Prompt>ReportParameter1</Prompt>
-    </ReportParameter>
-    <ReportParameter Name="CompanyAddress">
       <DataType>String</DataType>
       <Nullable>true</Nullable>
       <AllowBlank>true</AllowBlank>
