Implement multiple filters and related actions in Data Analysis Action Rule
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C40214

--- a/Vanrise/Code/Vanrise.Analytic.Web/Analytic/Directives/DataAnalysis/ProfilingAndCalculation/AlertRuleExtensions/Templates/DAProfCalcAlertRuleSettingsTemplate.html
+++ b/Vanrise/Code/Vanrise.Analytic.Web/Analytic/Directives/DataAnalysis/ProfilingAndCalculation/AlertRuleExtensions/Templates/DAProfCalcAlertRuleSettingsTemplate.html
@@ -5,6 +5,7 @@
         </vr-columns>
     </vr-row>
 </vr-tab>
-<vr-tab header="'Actions'" ng-if="scopeModel.selectedAnalysisTypeId!=undefined">
-    <vr-notification-vraction-management on-ready="scopeModel.onVRActionManagementDirectiveReady" vr-loader="scopeModel.isActionLoading"></vr-notification-vraction-management>
+
+<vr-tab header="'Settings'" ng-if="scopeModel.selectedAnalysisTypeId!=undefined">
+    <vr-genericdata-datarecordalertrule-settings on-ready="scopeModel.onDataRecordAlertRuleSettingsReady" vr-loader="scopeModel.isSettingsLoading"></vr-genericdata-datarecordalertrule-settings>
 </vr-tab>
