--- a/Vanrise/Code/Vanrise.Analytic.Web/Analytic/Directives/DataAnalysis/ProfilingAndCalculation/AlertRuleExtensions/Templates/DAProfCalcAlertRuleCriteriaTemplate.html
+++ b/Vanrise/Code/Vanrise.Analytic.Web/Analytic/Directives/DataAnalysis/ProfilingAndCalculation/AlertRuleExtensions/Templates/DAProfCalcAlertRuleCriteriaTemplate.html
@@ -1,4 +1,12 @@
-﻿<vr-row>
+﻿<vr-row vr-loader="scopeModel.isDataAnalysisRecordFilterDirectiveLoading">
+    <vr-columns width="fullrow">
+        <vr-section title="{{scopeModel.rawRecordFilterLabel}}" collapsible>
+            <vr-genericdata-recordfilter on-ready="scopeModel.onDataAnalaysisRecordFilterDirectiveReady"></vr-genericdata-recordfilter>
+        </vr-section>
+    </vr-columns>
+</vr-row>
+
+<vr-row>
     <vr-columns width="1/2row">
         <vr-analytic-dataanalysisitemdefinition-selector on-ready="scopeModel.onDataAnalysisItemDefinitionSelectorReady"
                                                          onselectionchanged="scopeModel.onDataAnalysisItemDefinitionSelectionChanged"
@@ -11,23 +19,5 @@
                                                       customlabel="Grouping Fields">
 
         </vr-analytic-daprofcalc-outputfields-selector>
-    </vr-columns>
-</vr-row>
-
-<vr-row vr-loader="scopeModel.isDataAnalysisRecordFilterDirectiveLoading">
-    <vr-columns width="fullrow">
-        <vr-section title="{{scopeModel.rawRecordFilterLabel}}" collapsible>
-            <vr-genericdata-recordfilter on-ready="scopeModel.onDataAnalaysisRecordFilterDirectiveReady"></vr-genericdata-recordfilter>
-        </vr-section>
-    </vr-columns>
-</vr-row>
-
-<vr-row vr-loader="scopeModel.isRecordFilterDirectiveLoading" ng-show="scopeModel.isDataanalysisitemdefinitionSelected">
-    <vr-columns width="fullrow">
-        <vr-validator default validate="scopeModel.validateRecordFilter()">
-            <vr-section title="Analysis Filter" collapsible>
-                <vr-genericdata-recordfilter on-ready="scopeModel.onRecordFilterDirectiveReady"></vr-genericdata-recordfilter>
-            </vr-section>
-        </vr-validator>
     </vr-columns>
 </vr-row>
