implementation drill down for object tracking
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C40218

--- a/Vanrise/Code/Vanrise.Runtime.Web/Runtime/Directives/SchedulerTask/Templates/SchedulerTaskGridTemplate.html
+++ b/Vanrise/Code/Vanrise.Runtime.Web/Runtime/Directives/SchedulerTask/Templates/SchedulerTaskGridTemplate.html
@@ -14,6 +14,9 @@
         <vr-datagridcolumn headertext="'Status'" field="'Entity.StatusDescription'" disablesorting="true"></vr-datagridcolumn>
         <vr-datagridcolumn headertext="'Last Run Time'" field="'Entity.LastRunTime'" type="'LongDatetime'" widthfactor="5" disablesorting="true"></vr-datagridcolumn>
         <vr-datagridcolumn headertext="'Next Run Time'" field="'Entity.NextRunTime'" type="'LongDatetime'" widthfactor="5" disablesorting="true"></vr-datagridcolumn>
+        <vr-datagridexpandablerow>
+            <vr-directivetabs tabitems="dataItem.drillDownExtensionObject.drillDownDirectiveTabs"></vr-directivetabs>
+        </vr-datagridexpandablerow>
     </vr-datagrid>
 </span>
 
