--- a/Vanrise/Code/Vanrise.GenericData.Web/VR_GenericData/Elements/Notification/DataRecord/Directive/Templates/NotificationTypeSettingsGridTemplate.html
+++ b/Vanrise/Code/Vanrise.GenericData.Web/VR_GenericData/Elements/Notification/DataRecord/Directive/Templates/NotificationTypeSettingsGridTemplate.html
@@ -7,9 +7,12 @@
                      pagingtype="'PagingOnScroll'"
                      loadmoredata="scopeModel.loadMoreData"
                      idfield="Entity.VRNotificationId"
-                     hidepaginginfo>
+                     hidepaginginfo normalcell>
 
-            <vr-datagridcolumn headertext="'ID'" field="'Entity.VRNotificationId'" disablesorting="true" fixedwidth="'200'"></vr-datagridcolumn>
+            <vr-datagridcolumn headertext="'ID'" field="'Entity.VRNotificationId'" disablesorting="true" fixedwidth="'80'"></vr-datagridcolumn>
+            <vr-datagridcolumn headertext="'Created'" field="'Entity.CreationTime'" type="'LongDatetime'" disablesorting="true" fixedwidth="'120'"></vr-datagridcolumn>
+            <vr-datagridcolumn headertext="'Description'" field="'Entity.Description'" disablesorting="true" widthfactor="'20'"></vr-datagridcolumn>
+            <vr-datagridcolumn headertext="'Status'" field="'StatusDescription'" getcolor="getStatusColor" disablesorting="true" fixedwidth="'100'"></vr-datagridcolumn>
             <vr-datagridcolumn ng-repeat="column in scopeModel.columns" columnattributes="column"></vr-datagridcolumn>
         </vr-datagrid>
     </vr-columns>
