--- a/Vanrise/Code/Vanrise.GenericData.Web/VR_GenericData/Elements/Notification/DataRecord/Directive/Templates/NotificationTypeSettingsSearchEditorTemplate.html
+++ b/Vanrise/Code/Vanrise.GenericData.Web/VR_GenericData/Elements/Notification/DataRecord/Directive/Templates/NotificationTypeSettingsSearchEditorTemplate.html
@@ -1,1 +1,19 @@
 ﻿
+
+<!--<span ng-show="scopeModel.showBasicTab()">
+    <vr-columns colnum="2">
+        <vr-textbox value="scopeModel.Text" label="Testing"></vr-textbox>
+    </vr-columns>
+</span>-->
+
+<vr-row ng-show="scopeModel.showAdvancedTab()">
+    <vr-columns width="fullrow">
+        <span vr-loader="scopeModel.isSearchDirectiveLoading">
+            <vr-section title="Advanced Filter" collapsible>
+                <vr-genericdata-recordfilter on-ready="scopeModel.onRecordFilterDirectiveReady"></vr-genericdata-recordfilter>
+            </vr-section>
+        </span>
+    </vr-columns>
+</vr-row>
+
+
