export to excel
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C40248

--- a/Vanrise/Code/Vanrise.Common.Web/Common/Directives/ObjectTracking/Templates/ObjectTrackingGridTemplate.html
+++ b/Vanrise/Code/Vanrise.Common.Web/Common/Directives/ObjectTracking/Templates/ObjectTrackingGridTemplate.html
@@ -5,7 +5,7 @@
              menuactions="gridMenuActions"
              idfield="Entity.VRObjectTrackingId"
              defaultsortbyfieldname="'Entity.Time'"
-             defaultsortdirection="'DESC'">
+             defaultsortdirection="'DESC'" enableautoexport="true">
     <vr-datagridcolumn headertext="'ID'" field="'Entity.VRObjectTrackingId'" fixedwidth="60"></vr-datagridcolumn>
     <vr-datagridcolumn headertext="'Time'" field="'Entity.Time'" type="'LongDatetime'" fixedwidth="120"></vr-datagridcolumn>
     <vr-datagridcolumn headertext="'User Name'" field="'UserName'" type="'Text'"></vr-datagridcolumn>
