--- a/Retail/Code/Retail.BusinessEntity.Web/Retail_BusinessEntity/Directives/Package/Templates/PackageGridTemplate.html
+++ b/Retail/Code/Retail.BusinessEntity.Web/Retail_BusinessEntity/Directives/Package/Templates/PackageGridTemplate.html
@@ -5,7 +5,7 @@
              dataretrievalfunction="scopeModel.dataRetrievalFunction"
              pagingtype="'PagingOnScroll'"
              menuactions="scopeModel.menuActions"
-             idfield="Entity.PackageId">
+             idfield="Entity.PackageId" enableautoexport="true">
 
     <vr-datagridcolumn headertext="'Id'" field="'Entity.PackageId'"></vr-datagridcolumn>
     <vr-datagridcolumn headertext="'Name'" field="'Entity.Name'"></vr-datagridcolumn>
