--- a/Vanrise/Code/Vanrise.Notification.BP/ExecuteNotificationProcess.xaml
+++ b/Vanrise/Code/Vanrise.Notification.BP/ExecuteNotificationProcess.xaml
@@ -3,7 +3,6 @@
  xmlns:local="clr-namespace:Vanrise.Notification.BP"
  xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
  xmlns:mca="clr-namespace:Microsoft.CSharp.Activities;assembly=System.Activities"
- xmlns:s="clr-namespace:System;assembly=mscorlib"
  xmlns:sads="http://schemas.microsoft.com/netfx/2010/xaml/activities/debugger"
  xmlns:sap="http://schemas.microsoft.com/netfx/2009/xaml/activities/presentation"
  xmlns:sap2010="http://schemas.microsoft.com/netfx/2010/xaml/activities/presentation"
@@ -45,8 +44,8 @@
       <AssemblyReference>Vanrise.BusinessProcess</AssemblyReference>
       <AssemblyReference>Vanrise.BusinessProcess.Entities</AssemblyReference>
       <AssemblyReference>Vanrise.BusinessProcess.WFActivities</AssemblyReference>
-      <AssemblyReference>Vanrise.Entities</AssemblyReference>
       <AssemblyReference>Vanrise.Queueing</AssemblyReference>
+      <AssemblyReference>Vanrise.Entities</AssemblyReference>
       <AssemblyReference>Vanrise.Notification.BP.Activities</AssemblyReference>
       <AssemblyReference>Vanrise.Notification.BP.Arguments</AssemblyReference>
       <AssemblyReference>Vanrise.Notification.Entities</AssemblyReference>
@@ -93,7 +92,7 @@
         <ActivityAction.Argument>
           <DelegateInArgument x:TypeArguments="vne:VRAction" Name="action" />
         </ActivityAction.Argument>
-        <local:ExecuteActionProcess>
+        <local:ExecuteActionProcess sap2010:WorkflowViewState.IdRef="ExecuteActionProcess_1">
           <local:ExecuteActionProcess.EventPayLoad>
             <InArgument x:TypeArguments="vne:IVRActionEventPayload">
               <mca:CSharpValue x:TypeArguments="vne:IVRActionEventPayload">vrNotification.Data.EventPayload</mca:CSharpValue>
@@ -104,14 +103,13 @@
               <mca:CSharpValue x:TypeArguments="vne:VRAction">action</mca:CSharpValue>
             </InArgument>
           </local:ExecuteActionProcess.VrAction>
-          <sap2010:WorkflowViewState.IdRef>ExecuteActionProcess_1</sap2010:WorkflowViewState.IdRef>
         </local:ExecuteActionProcess>
       </ActivityAction>
     </ParallelForEach>
     <vnba1:UpdateNotificationStatus DisplayName="UpdateStatusCompleted" sap2010:WorkflowViewState.IdRef="UpdateNotificationStatus_2">
       <vnba1:UpdateNotificationStatus.Status>
         <InArgument x:TypeArguments="vne:VRNotificationStatus">
-          <mca:CSharpValue x:TypeArguments="vne:VRNotificationStatus">VRNotificationStatus.Completed</mca:CSharpValue>
+          <mca:CSharpValue x:TypeArguments="vne:VRNotificationStatus">VRNotificationStatus.Executed</mca:CSharpValue>
         </InArgument>
       </vnba1:UpdateNotificationStatus.Status>
       <vnba1:UpdateNotificationStatus.VRNotificationId>
@@ -120,7 +118,7 @@
         </InArgument>
       </vnba1:UpdateNotificationStatus.VRNotificationId>
     </vnba1:UpdateNotificationStatus>
-    <sads:DebugSymbol.Symbol>d0tDOlxURlNcVmFucmlzZVxDb2RlXFZhbnJpc2UuTm90aWZpY2F0aW9uLkJQXEV4ZWN1dGVOb3RpZmljYXRpb25Qcm9jZXNzLnhhbWwROQN8DgIBAT0FPVwCASQ+BUkfAgEdSgVVJgIBFlYFbhcCAQlvBXomAgECPUM9WQIBJUELQWkCASFGC0ZbAgEeUgtSZgIBGk0LTXcCARdZC1l5AgETYAlsJgIBCncLd2YCAQZyC3J3AgEDYw9jfgIBD2gPaFcCAQs=</sads:DebugSymbol.Symbol>
+    <sads:DebugSymbol.Symbol>d0tDOlxURlNcVmFucmlzZVxDb2RlXFZhbnJpc2UuTm90aWZpY2F0aW9uLkJQXEV4ZWN1dGVOb3RpZmljYXRpb25Qcm9jZXNzLnhhbWwROAN6DgIBATwFPFwCASQ9BUgfAgEdSQVUJgIBFlUFbBcCAQltBXgmAgECPEM8WQIBJUALQGkCASFFC0VcAgEeUQtRZwIBGkwLTHcCARdYC1h5AgETXwlqJgIBCnULdWcCAQZwC3B2AgEDYg9ifgIBD2cPZ1cCAQs=</sads:DebugSymbol.Symbol>
   </Sequence>
   <sap2010:WorkflowViewState.ViewStateManager>
     <sap2010:ViewStateManager>
