add MinNotificationInterval to DAProfCalcAlertRuleSettings
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C40272

--- a/Vanrise/Code/Vanrise.Analytic.Web/Analytic/Directives/DataAnalysis/ProfilingAndCalculation/AlertRuleExtensions/Templates/DAProfCalcAlertRuleCriteriaTemplate.html
+++ b/Vanrise/Code/Vanrise.Analytic.Web/Analytic/Directives/DataAnalysis/ProfilingAndCalculation/AlertRuleExtensions/Templates/DAProfCalcAlertRuleCriteriaTemplate.html
@@ -7,14 +7,17 @@
 </vr-row>
 
 <vr-row>
-    <vr-columns width="1/2row">
+    <vr-columns width="1/3row">
+        <vr-timespan label="Min Notification Interval" isrequired="true" value="scopeModel.minNotificationInterval"></vr-timespan>
+    </vr-columns>
+    <vr-columns width="1/3row">
         <vr-analytic-dataanalysisitemdefinition-selector on-ready="scopeModel.onDataAnalysisItemDefinitionSelectorReady"
                                                          onselectionchanged="scopeModel.onDataAnalysisItemDefinitionSelectionChanged"
                                                          customlabel="Analysis Type" isrequired="true">
 
         </vr-analytic-dataanalysisitemdefinition-selector>
     </vr-columns>
-    <vr-columns width="1/2row" ng-show="scopeModel.isDataanalysisitemdefinitionSelected">
+    <vr-columns width="1/3row" ng-show="scopeModel.isDataanalysisitemdefinitionSelected">
         <vr-analytic-daprofcalc-outputfields-selector on-ready="scopeModel.onDataAnalysisItemOutputFieldsSelectorReady" ismultipleselection
                                                       customlabel="Grouping Fields">
 
