--- a/Vanrise/Code/Vanrise.GenericData.Web/VR_GenericData/Elements/Notification/DataRecord/Directive/Templates/AlertRuleSettingsTemplate.html
+++ b/Vanrise/Code/Vanrise.GenericData.Web/VR_GenericData/Elements/Notification/DataRecord/Directive/Templates/AlertRuleSettingsTemplate.html
@@ -1,7 +1,13 @@
 ﻿<vr-row>
-    <vr-genericdata-datarecordalertruleconfig-selector normal-col-num="3" isrequired="true" on-ready="scopeModel.onDataRecordAlertRuleConfigSelectorReady" hideremoveicon
-                                                       selectedvalues="scopeModel.selectedDataRecordAlertRuleConfig"></vr-genericdata-datarecordalertruleconfig-selector>
+    <vr-genericdata-datarecordalertruleconfig-selector on-ready="scopeModel.onDataRecordAlertRuleConfigSelectorReady"
+                                                       selectedvalues="scopeModel.selectedDataRecordAlertRuleConfig"
+                                                       normal-col-num="3" isrequired="true" hideremoveicon>
+    </vr-genericdata-datarecordalertruleconfig-selector>
 </vr-row>
-<vr-directivewrapper ng-if="scopeModel.selectedDataRecordAlertRuleConfig != undefined" directive="scopeModel.selectedDataRecordAlertRuleConfig.Editor"
-                     on-ready="scopeModel.onDirectiveReady" vr-loader="scopeModel.isDirectiveLoading">
-</vr-directivewrapper>
+<span vr-loader="scopeModel.isDirectiveLoading">
+    <vr-directivewrapper ng-if="scopeModel.selectedDataRecordAlertRuleConfig != undefined"
+                         directive="scopeModel.selectedDataRecordAlertRuleConfig.Editor"
+                         on-ready="scopeModel.onDirectiveReady">
+    </vr-directivewrapper>
+</span>
+
