--- a/Vanrise/Code/Vanrise.Analytic.Web/Analytic/Directives/DataAnalysis/ProfilingAndCalculation/AlertRuleExtensions/Templates/DAProfCalcAlertRuleCriteriaTemplate.html
+++ b/Vanrise/Code/Vanrise.Analytic.Web/Analytic/Directives/DataAnalysis/ProfilingAndCalculation/AlertRuleExtensions/Templates/DAProfCalcAlertRuleCriteriaTemplate.html
@@ -1,4 +1,4 @@
-﻿<vr-row vr-loader="scopeModel.isDataAnalysisRecordFilterDirectiveLoading">
+﻿<vr-row>
     <vr-columns width="fullrow">
         <vr-section title="{{scopeModel.rawRecordFilterLabel}}" collapsible>
             <vr-genericdata-recordfilter on-ready="scopeModel.onDataAnalaysisRecordFilterDirectiveReady"></vr-genericdata-recordfilter>
@@ -14,13 +14,13 @@
         <vr-analytic-dataanalysisitemdefinition-selector on-ready="scopeModel.onDataAnalysisItemDefinitionSelectorReady"
                                                          onselectionchanged="scopeModel.onDataAnalysisItemDefinitionSelectionChanged"
                                                          customlabel="Analysis Type" isrequired="true">
-
         </vr-analytic-dataanalysisitemdefinition-selector>
     </vr-columns>
-    <vr-columns width="1/3row" ng-show="scopeModel.isDataanalysisitemdefinitionSelected">
-        <vr-analytic-daprofcalc-outputfields-selector on-ready="scopeModel.onDataAnalysisItemOutputFieldsSelectorReady" ismultipleselection
-                                                      customlabel="Grouping Fields">
-
-        </vr-analytic-daprofcalc-outputfields-selector>
+    <vr-columns width="1/3row" ng-show="scopeModel.isDataAnalysisItemDefinitionSelected">
+        <span vr-loader="scopeModel.isOutputFieldsSelectorLoading">
+            <vr-analytic-daprofcalc-outputfields-selector on-ready="scopeModel.onDataAnalysisItemOutputFieldsSelectorReady"
+                                                          customlabel="Grouping Fields" ismultipleselection>
+            </vr-analytic-daprofcalc-outputfields-selector>
+        </span>
     </vr-columns>
 </vr-row>
