--- a/Vanrise/Code/Vanrise.Notification.Web/VR_Notification/Views/VRAlertRule/VRAlertRuleEditor.html
+++ b/Vanrise/Code/Vanrise.Notification.Web/VR_Notification/Views/VRAlertRule/VRAlertRuleEditor.html
@@ -8,8 +8,9 @@
                             <vr-textbox label="Name" value="scopeModel.name" isrequired></vr-textbox>
                         </vr-columns>
                         <vr-columns width="1/2row">
-                            <vr-notification-alertruletype-selector on-ready="scopeModel.onAlertRuleTypeSelectorReady" isrequired="true" selectedvalues="scopeModel.selectedRuleType"
-                                                                    onselectionchanged="scopeModel.onAlertRuleTypeSelectionChanged"></vr-notification-alertruletype-selector>
+                            <vr-notification-alertruletype-selector on-ready="scopeModel.onAlertRuleTypeSelectorReady" selectedvalues="scopeModel.selectedRuleType"
+                                                                    onselectionchanged="scopeModel.onAlertRuleTypeSelectionChanged" isrequired="true">
+                            </vr-notification-alertruletype-selector>
                         </vr-columns>
                     </vr-row>
                 </vr-tab>
