Allowed the user to download a Sale Price List Template and an Import Rate Plan Template
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C40281

--- a/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Views/SalePriceListTemplate/SalePriceListTemplateManagement.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Views/SalePriceListTemplate/SalePriceListTemplateManagement.html
@@ -10,7 +10,8 @@
 		<vr-row removeline>
 			<vr-actionbar showcollapsebutton="true" issectioncollapsed="filterSectionCollapsed">
 				<div transclude-to="buttons">
-					<vr-button type="Search" formname="formFilter" data-onclick="scopeModel.search"></vr-button>
+                    <vr-button type="Download" data-onclick="scopeModel.download"></vr-button>
+                    <vr-button type="Search" formname="formFilter" data-onclick="scopeModel.search"></vr-button>
 					<vr-button type="Add" data-onclick="scopeModel.add" haspermission="scopeModel.hasAddPermission"></vr-button>
 				</div>
 			</vr-actionbar>
