Implmenting inv to acc balance relation and invoice source
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C40285

--- a/Vanrise/Code/Vanrise.AccountBalance.Web/VR_AccountBalance/Directives/MainExtensions/Account/Templates/VRAccountTypeSettings.html
+++ b/Vanrise/Code/Vanrise.AccountBalance.Web/VR_AccountBalance/Directives/MainExtensions/Account/Templates/VRAccountTypeSettings.html
@@ -4,6 +4,7 @@
             <vr-columns width="1/2row">
                 <vr-textbox value="scopeModel.name" label="Name" isrequired></vr-textbox>
             </vr-columns>
+            <vr-invtoaccbalancerelation-definition-selector on-ready="scopeModel.relationDefinitionSelectorReady"  normal-col-num="6"></vr-invtoaccbalancerelation-definition-selector>
         </vr-row>
         <vr-accountusage-periodsettings on-ready="scopeModel.accountUsagePeriodSettingsReady" isrequired="true" normal-col-num="6"></vr-accountusage-periodsettings>
         <vr-row>
